fixed manfred photo on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,13 @@
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 837px) {
+  .img-manfred {
+    width: 215px;
+    height: 272px;
+  }
+}
+
 /* Small devices, tablets, larger phones */
 @media only screen and (min-width: 600px) {
   .header-h3 {
